--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "date-fns": "^2.29.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "gray-matter": "^4.0.3",
     "next": "13.3.1",
+    "next-intl": "^2.13.1",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
